[gd_scene load_steps=4 format=3 uid="uid://d1fq6rmokfctb"]

[ext_resource type="Script" uid="uid://dr3rcnf1dn67a" path="res://scenes/projectiles/laser.gd" id="1_il6gk"]
[ext_resource type="Texture2D" uid="uid://pii607ic0w6v" path="res://graphics/projectiles/blue.png" id="1_lg0xw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xsgla"]
radius = 8.0
height = 110.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 23
script = ExtResource("1_il6gk")
speed = 1000

[node name="Blue" type="Sprite2D" parent="."]
position = Vector2(-27, 0)
rotation = 1.5708
texture = ExtResource("1_lg0xw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xsgla")

[node name="SelfDestroyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestroyTimer" to="." method="_on_self_destroy_timer_timeout"]
